--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-family: 'Roboto',
-    sans-serif;
+        sans-serif;
 }
 
 * {
@@ -17,7 +17,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* background: #555; */
+    background: #fff;
     height: 100vh;
 }
 
@@ -38,13 +38,16 @@ body {
     color: #0c41a3;
     font-size: 2.5em;
 }
-.header h2{
-     font-weight: normal;
-     font-size: 2em;
+
+.header h2 {
+    font-weight: normal;
+    font-size: 2em;
 }
-.light-text{
+
+.light-text {
     font-weight: lighter;
 }
+
 .form-container {
     height: 700px;
     align-self: center;
