--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
 }
 
 .header h2 {
-    font-weight: normal;
+    font-weight: 400;
     font-size: 2em;
     margin-top: 0;
     width: 400px;
