--- a/style.css
+++ b/style.css
@@ -64,6 +64,15 @@ body {
     padding-top: 4rem;
 }
 
+
+
+.error-msg{
+    color: #930b0b;
+}
+.form-input:focus {
+    outline: 0;
+}
+
 .form-input {
     width: 73%;
     box-sizing: border-box;
@@ -74,9 +83,7 @@ body {
     border-left: 10px solid #067bc9;
 }
 
-.form-input:focus {
-    outline: 0;
-}
+
 
 ::placeholder{
     font-size: smaller;
@@ -95,6 +102,7 @@ body {
     height: 2.3rem;
     width: 6rem;
     border-radius: 4px;
+    outline: 0;
 }
 
 .sign-up {
