worked on the login

--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700;900&display=swap');
-
 body {
-    font-family: 'Roboto',
+    font-family: 'Open Sans',
         sans-serif;
 }
 
@@ -49,7 +47,7 @@ body {
 }
 
 .light-text {
-    font-weight: lighter;
+  color:#a5aeb7;
 }
 
 .form-container {
@@ -64,15 +62,18 @@ body {
     padding-top: 4rem;
 }
 
-.error-msg{
+.error-msg {
     color: #8B0000;
+    display: block;
+    margin-top: 1.5rem;
 }
+
 .form-input:focus {
     outline: 0;
 }
 
 .form-input {
-    width: 73%;
+    /* width: 73%; */
     box-sizing: border-box;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -81,23 +82,21 @@ body {
     border-left: 10px solid #067bc9;
 }
 
-
-
-::placeholder{
+::placeholder {
     font-size: smaller;
     font-weight: lighter;
 }
 
 .forget-password {
-    padding-left: 2rem;
+    padding-left: 1.9rem;
     text-decoration: none;
-    color: inherit;
+    color: #a5aeb7;
 }
 
 .button {
     cursor: pointer;
-    padding: 10px 10px;
-    height: 2.3rem;
+    padding: 7px 10px;
+    height: 2.1rem;
     width: 6rem;
     border-radius: 4px;
     outline: 0;
@@ -106,8 +105,13 @@ body {
 .sign-up {
     color: #067bc9;
     background-color: #fff;
-    margin-left: 1.5rem;
+    margin-left: 0.7rem;
     border: 2px solid #067bc9
+}
+
+.sign-up:hover {
+    background-color: #067bc9;
+    color: #fff;
 }
 
 .login {
