--- a/style.css
+++ b/style.css
@@ -82,14 +82,43 @@ body {
     border-left: 10px solid #067bc9;
 }
 
-::placeholder {
+/* Modify form placeholder text */
+.change::-webkit-input-placeholder {
+    /* WebKit, Blink, Edge */
+     font-size: 10px;
+     letter-spacing: 1px;
+     color:#a5aeb7;
+}
+
+.change:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    font-size: 10px;
+    letter-spacing: 1px;
+    color:#a5aeb7;
+}
+
+.change::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    font-size: 10px;
+    letter-spacing: 1px;
+    color:#a5aeb7;
+}
+
+.change:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+     font-size: 10px;
+     letter-spacing: 1px;
+     color:#a5aeb7;
+}
+
+/* ::placeholder {
    font-size: 10px;
    letter-spacing: 1px;
    color:#a5aeb7;
-}
+} */
 
 .forget-password {
-    padding-left: 1.9rem;
+    padding-left: 1.7rem;
     text-decoration: none;
     color: #a5aeb7;
 }
