--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 .form-control {
     margin-top: 18px;
+    position: relative;
 }
 
 .image-section {
@@ -70,7 +71,6 @@ body {
 
 .form-input:focus {
   outline-color: rgba(6, 123, 201);
-   /* box-shadow: 2px 2px 2px #067bc9; */
 }
 
 .form-input {
@@ -82,43 +82,25 @@ body {
     border-left: 10px solid #067bc9;
 }
 
-/* Modify form placeholder text */
-.change::-webkit-input-placeholder {
-    /* WebKit, Blink, Edge */
-     font-size: 10px;
-     letter-spacing: 1px;
-     color:#a5aeb7;
+.email-password-place{
+    position: absolute;
+    font-size:10px;
+    top: 0;
+    left: 30px;
+    padding: 7px 0 0 24px;
+    color: #a5aeb7;
 }
 
-.change:-moz-placeholder {
-    /* Mozilla Firefox 4 to 18 */
-    font-size: 10px;
-    letter-spacing: 1px;
-    color:#a5aeb7;
+input[type=text],
+input[type=password] {
+    padding-top: 20px;
+    font-size: 15px;
+    color: #067bc9;
 }
 
-.change::-moz-placeholder {
-    /* Mozilla Firefox 19+ */
-    font-size: 10px;
-    letter-spacing: 1px;
-    color:#a5aeb7;
-}
-
-.change:-ms-input-placeholder {
-    /* Internet Explorer 10-11 */
-     font-size: 10px;
-     letter-spacing: 1px;
-     color:#a5aeb7;
-}
-
-/* ::placeholder {
-   font-size: 10px;
-   letter-spacing: 1px;
-   color:#a5aeb7;
-} */
 
 .forget-password {
-    padding-left: 1.7rem;
+    padding-left: 1rem;
     text-decoration: none;
     color: #a5aeb7;
 }
